[tool.poetry]
name = "ddg2json"
version = "0.1.1"
description = "Parses scraped HTML of DuckDuckGo pages into JSON"
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
beautifulsoup4 = ">=4.8"

[tool.poetry.scripts]
ddg2json = 'ddg2json:main'


[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
